--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/material-nextjs": "^5.15.11",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "typescript": "^5"
