--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10"
   },
   "devDependencies": {
